# AutoTrade

./: BiboxExchange.cpp  BiboxExchange.h  CMakeLists.txt  ExchangeFac.cpp  ExchangeFac.h  GateioExchange.cpp  GateioExchange.h  HttpRequest.cpp  HttpRequest.h  HuobiproExchange.cpp  HuobiproExchange.h  README.md  TradeBase.cpp  TradeBase.h  ZBExchange.cpp  ZBExchange.h  base64.cpp  base64.h  hmac-sha256.cpp  hmac-sha256.h  main.cpp
BiboxExchange/: BiboxExchange.cpp  BiboxExchange.h
GateioExchange/: GateioExchange.cpp  GateioExchange.h
HedgingTrade/: HedgingTrade.cpp  HedgingTrade.h
HuobiproExchange/: HuobiproExchange.cpp  HuobiproExchange.h
OkexExchange/: OkexExchange.cpp  OkexExchange.h
